<resources>
    <string name="app_name">Heads Up</string>
    <string name="title">HEADS UP</string>
    <string name="selection">SELECT A CATEGORY</string>
    <string name="play_button">PLAY</string>
    <string name="correct">CORRECT</string>
    <string name="incorrect">INCORRECT</string>
    <string name="settings_time_title">TIME SETTINGS</string>
    <string name="passed">PASSED</string>
    <string name="time_is_up">TIME\'S UP</string>
    <string name="adjust_device">PLEASE ADJUST YOUR DEVICE</string>
    <string name="score_text">Score: </string>
    <string name="about">ABOUT</string>
    <string name="signature">APPLICATION CREATED BY IVAN VALETTE</string>
    <string name="icons_signature">ICONS PROVIDED BY icons8.com</string>
    <string name="settings_title">SETTINGS</string>
    <string name="dark_mode">DARK MODE</string>
    <string name="music">MUSIC</string>
    <string name="sound_effects">SOUND EFFECTS</string>
    <string name="time">TIME</string>
    <string name="reset_high_scores">RESET HIGH SCORES</string>
    <string-array name="animals">
        <item name="alligator">alligator</item>
        <item name="ant">ant</item>
        <item name="bear">bear</item>
        <item name="bee">bee</item>
        <item name="bird">bird</item>
        <item name="camel">camel</item>
        <item name="cat">cat</item>
        <item name="cheetah">cheetah</item>
        <item name="chicken">chicken</item>
        <item name="chimpanzee">chimpanzee</item>
        <item name="cow">cow</item>
        <item name="crocodile">crocodile</item>
        <item name="deer">deer</item>
        <item name="dog">dog</item>
        <item name="dolphin">dolphin</item>
        <item name="duck">duck</item>
        <item name="eagle">eagle</item>
        <item name="elephant">elephant</item>
        <item name="fish">fish</item>
        <item name="fly">fly</item>
        <item name="fox">fox</item>
        <item name="frog">frog</item>
        <item name="giraffe">giraffe</item>
        <item name="goat">goat</item>
        <item name="goldfish">goldfish</item>
        <item name="hamster">hamster</item>
        <item name="hippopotamus">hippopotamus</item>
        <item name="horse">horse</item>
        <item name="kangaroo">kangaroo</item>
        <item name="kitten">kitten</item>
        <item name="lion">lion</item>
        <item name="lobster">lobster</item>
        <item name="monkey">monkey</item>
        <item name="octopus">octopus</item>
        <item name="owl">owl</item>
        <item name="panda">panda</item>
        <item name="pig">pig</item>
        <item name="puppy">puppy</item>
        <item name="rabbit">rabbit</item>
        <item name="rat">rat</item>
        <item name="scorpion">scorpion</item>
        <item name="seal">seal</item>
        <item name="shark">shark</item>
        <item name="sheep">sheep</item>
        <item name="snail">snail</item>
        <item name="snake">snake</item>
        <item name="spider">spider</item>
        <item name="squirrel">squirrel</item>
        <item name="tiger">tiger</item>
        <item name="turtle">turtle</item>
        <item name="wolf">wolf</item>
        <item name="zebra">zebra</item>
    </string-array>
    <string-array name="countries">
        <item name="The Bahamas">The Bahamas</item>
        <item name="Barbados">Barbados</item>
        <item name="Belize">Belize</item>
        <item name="Canada">Canada</item>
        <item name="Costa Rica">Costa Rica</item>
        <item name="Cuba">Cuba</item>
        <item name="Dominica">Dominica</item>
        <item name="Dominican Republic">Dominican Republic</item>
        <item name="El Salvador">El Salvador</item>
        <item name="Grenada">Grenada</item>
        <item name="Guatemala">Guatemala</item>
        <item name="Haiti">Haiti</item>
        <item name="Honduras">Honduras</item>
        <item name="Jamaica">Jamaica</item>
        <item name="Mexico">Mexico</item>
        <item name="Nicaragua">Nicaragua</item>
        <item name="Panama">Panama</item>
        <item name="Saint Kitts and Nevis">Saint Kitts and Nevis</item>
        <item name="Saint Lucia">Saint Lucia</item>
        <item name="Saint Vincent and the Grenadines">Saint Vincent and the Grenadines</item>
        <item name="Trinidad and Tobago">Trinidad and Tobago</item>
        <item name="United States">United States</item>
        <item name="Albania">Albania</item>
        <item name="Andorra">Andorra</item>
        <item name="Armenia">Armenia</item>
        <item name="Austria">Austria</item>
        <item name="Azerbaijan">Azerbaijan</item>
        <item name="Belarus">Belarus</item>
        <item name="Belgium">Belgium</item>
        <item name="Bosnia and Herzegovina">Bosnia and Herzegovina</item>
        <item name="Bulgaria">Bulgaria</item>
        <item name="Croatia">Croatia</item>
        <item name="Cyprus">Cyprus</item>
        <item name="Czech Republic">Czech Republic</item>
        <item name="Denmark">Denmark</item>
        <item name="Estonia">Estonia</item>
        <item name="Finland">Finland</item>
        <item name="France">France</item>
        <item name="Georgia">Georgia</item>
        <item name="Germany">Germany</item>
        <item name="Greece">Greece</item>
        <item name="Hungary">Hungary</item>
        <item name="Iceland">Iceland</item>
        <item name="Ireland">Ireland</item>
        <item name="Kazakhstan">Kazakhstan</item>
        <item name="Latvia">Latvia</item>
        <item name="Liechtenstein">Liechtenstein</item>
        <item name="Lithuania">Lithuania</item>
        <item name="Luxembourg">Luxembourg</item>
        <item name="Macedonia">Macedonia</item>
        <item name="Malta">Malta</item>
        <item name="Moldova">Moldova</item>
        <item name="Monaco">Monaco</item>
        <item name="Montenegro">Montenegro</item>
        <item name="Netherlands">Netherlands</item>
        <item name="Norway">Norway</item>
        <item name="Poland">Poland</item>
        <item name="Portugal">Portugal</item>
        <item name="Russia">Russia</item>
        <item name="San Marino">San Marino</item>
        <item name="Serbia">Serbia</item>
        <item name="Slovakia">Slovakia</item>
        <item name="Slovenia">Slovenia</item>
        <item name="Spain">Spain</item>
        <item name="Sweden">Sweden</item>
        <item name="Switzerland">Switzerland</item>
        <item name="Turkey">Turkey</item>
        <item name="Ukraine">Ukraine</item>
        <item name="United Kingdom">United Kingdom</item>
    </string-array>
    <string-array name="actions">
        <item name="Act">Act</item>
        <item name="Agree">Agree</item>
        <item name="Arrive">Arrive</item>
        <item name="Ask">Ask</item>
        <item name="Bake">Bake</item>
        <item name="Bring">Bring</item>
        <item name="Build">Build</item>
        <item name="Buy">Buy</item>
        <item name="Call">Call</item>
        <item name="Climb">Climb</item>
        <item name="Close">Close</item>
        <item name="Come">Come</item>
        <item name="Cry">Cry</item>
        <item name="Dance">Dance</item>
        <item name="Dream">Dream</item>
        <item name="Drink">Drink</item>
        <item name="Eat">Eat</item>
        <item name="Enter">Enter</item>
        <item name="Exit">Exit</item>
        <item name="Fall">Fall</item>
        <item name="Fix">Fix</item>
        <item name="Go">Go</item>
        <item name="Grab">Grab</item>
        <item name="Help">Help</item>
        <item name="Hit">Hit</item>
        <item name="Hop">Hop</item>
        <item name="Insult">Insult</item>
        <item name="Joke">Joke</item>
        <item name="Jump">Jump</item>
        <item name="Kick">Kick</item>
        <item name="Laugh">Laugh</item>
        <item name="Leave">Leave</item>
        <item name="Lift">Lift</item>
        <item name="Listen">Listen</item>
        <item name="Make">Make</item>
        <item name="March">March</item>
        <item name="Move">Move</item>
        <item name="Nod">Nod</item>
        <item name="Open">Open</item>
        <item name="Play">Play</item>
        <item name="Read">Read</item>
        <item name="Ride">Ride</item>
        <item name="Run">Run</item>
        <item name="Send">Send</item>
        <item name="Shout">Shout</item>
        <item name="Sing">Sing</item>
        <item name="Sit">Sit</item>
        <item name="Smile">Smile</item>
        <item name="Spend">Spend</item>
        <item name="Stand">Stand</item>
        <item name="Talk">Talk</item>
        <item name="Think">Think</item>
        <item name="Throw">Throw</item>
        <item name="Touch">Touch</item>
        <item name="Turn">Turn</item>
        <item name="Visit">Visit</item>
        <item name="Vote">Vote</item>
        <item name="Wait">Wait</item>
        <item name="Walk">Walk</item>
        <item name="Write">Write</item>
        <item name="Yell">Yell</item>
    </string-array>
    <string-array name="gym">
        <item name="arnold">Arnold Schwarzenegger</item>
        <item name="run">run</item>
        <item name="walk">walk</item>
        <item name="deadlift">deadlift</item>
        <item name="squat">squat</item>
        <item name="trapecius">trapecius</item>
        <item name="biceps">biceps</item>
        <item name="triceps">triceps</item>
        <item name="flex">flex</item>
        <item name="exercise">exercise</item>
        <item name="gym">gym</item>
        <item name="chin ups">chin ups</item>
        <item name="bench press">bench press</item>
        <item name="leg press">leg press</item>
        <item name="deltoid">deltoid</item>
        <item name="abdomen">abdomen</item>
        <item name="obliques">obliques</item>
        <item name="dumbbell">dumbbell</item>
        <item name="barbell">barbell</item>
        <item name="smith machine">smith machine</item>
        <item name="squat rack">squat rack</item>
        <item name="boxing">boxing</item>
        <item name="boxing bag">boxing bag</item>
        <item name="crossfit">crossfit</item>
        <item name="jump rope">jump rope</item>
        <item name="personal trainer">personal trainer</item>
        <item name="zumba">zumba</item>
        <item name="sweat">sweat</item>
        <item name="injury">injury</item>
        <item name="protein">protein</item>
        <item name="treadmill">treadmill</item>
    </string-array>
</resources>