<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center">

    <android.support.v7.widget.CardView
        app:cardCornerRadius="10dp"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:id="@+id/popup"
        android:background="?attr/backgroundColor">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:id="@+id/settingsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_title"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textColor="?attr/textColor"/>

            <View
                android:id="@+id/settingsDivider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?attr/textColor"
                android:layout_below="@+id/settingsTitle"
                android:layout_marginBottom="0dp"/>

            <TextView
                android:id="@+id/tvDarkMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="18dp"
                android:textStyle="bold"
                android:textColor="?attr/textColor"
                android:layout_below="@+id/settingsTitle"
                android:text="@string/dark_mode" />

            <TextView
                android:id="@+id/tvMusic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="18dp"
                android:textStyle="bold"
                android:textColor="?attr/textColor"
                android:layout_below="@+id/tvDarkMode"
                android:text="@string/music" />

            <TextView
                android:id="@+id/tvSoundEffects"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="18dp"
                android:textStyle="bold"
                android:textColor="?attr/textColor"
                android:layout_below="@+id/tvMusic"
                android:text="@string/sound_effects" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="18dp"
                android:textStyle="bold"
                android:textColor="?attr/textColor"
                android:layout_below="@+id/tvSoundEffects"
                android:text="@string/time" />

            <TextView
                android:id="@+id/tvResetHighScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="18dp"
                android:textStyle="bold"
                android:textColor="?attr/textColor"
                android:layout_below="@+id/tvTime"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/reset_high_scores" />

            <Switch
                android:id="@+id/switchDarkMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settingsTitle"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="18dp"
                android:layout_alignBottom="@+id/tvDarkMode"/>

            <Switch
                android:id="@+id/switchMusic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/switchDarkMode"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="18dp"
                android:layout_alignBottom="@+id/tvMusic"/>

            <Switch
                android:id="@+id/switchSoundEffects"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/switchMusic"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="18dp"
                android:layout_alignBottom="@+id/tvSoundEffects"/>

            <TextView
                android:text="60"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/tvTime"
                android:layout_toStartOf="@+id/imgArrow"
                android:layout_marginEnd="0dp"
                android:layout_alignTop="@+id/tvTime"
                android:textColor="?attr/textColor"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <ImageView
                android:id="@+id/imgArrow"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignBottom="@+id/tvTime"
                android:layout_alignTop="@+id/tvTime"
                android:src="?attr/arrowRes"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="5dp"
                />


        </RelativeLayout>



    </android.support.v7.widget.CardView>

</RelativeLayout>