<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/edit_name"
    android:layout_width="400dp"
    android:layout_height="400dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:minWidth="175dp"
    android:minHeight="225dp"
    android:background="@drawable/round_fragment"
    android:tag="timeSettings">

    <android.support.v7.widget.CardView
        android:id="@+id/aboutPopup"
        app:cardCornerRadius="10dp"
        android:layout_width="350dp"
        android:layout_height="450dp"
        android:background="?attr/backgroundColor">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/aboutTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textColor="?attr/textColor"
                android:textSize="40sp"
                android:textStyle="bold"
                />
            <View
                android:id="@+id/aboutDivider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?attr/textColor"
                android:layout_below="@+id/aboutTitle"
                android:layout_marginBottom="0dp"/>

            <TextView
                android:id="@+id/siganture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signature"
                android:textColor="?attr/textColor"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="200dp"
                android:layout_below="@+id/aboutDivider"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/icons_signature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/icons_signature"
                android:textColor="?attr/textColor"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/siganture"
                android:gravity="center"
                />
        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>