<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="?attr/backgroundColor">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:fontFamily="sans-serif-condensed"
        android:textSize="44sp"
        android:textStyle="bold"
        android:textColor="?attr/textColor"
        android:layout_marginStart="5dp"
        android:layout_alignParentTop="true"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?attr/textColor"
        android:layout_below="@+id/tvTitle"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/select"
        android:layout_below="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/selection"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        android:textColor="?attr/textColor"
        android:textStyle="bold"
        />

    <HorizontalScrollView
        android:id="@+id/scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:overScrollMode="never"
        android:layout_below="@+id/select"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/backgroundColor"
            android:id="@+id/li"
            android:orientation="horizontal">
        </LinearLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_button"
        android:textSize="32sp"
        android:paddingLeft="80dp"
        android:paddingRight="80dp"
        android:textColor="?attr/backgroundColor"
        android:background="@drawable/rounded_corner_button"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/scroll"
        android:layout_centerInParent="true"
        />
    <ImageView
        android:id="@+id/settings"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentBottom="true"
        android:src="?attr/settingsRes"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="15dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"/>

    <ImageView
        android:id="@+id/helpImg"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_toStartOf="@+id/settings"
        android:src="?attr/helpRes"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="5dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:onClick="onClick"
        android:focusable="true"/>

</RelativeLayout>